syntax = "proto3";

package orbital;

option java_multiple_files = true;
option java_package = "tr.com.kadiraydemir.orekit.grpc";
option java_outer_classname = "EclipseServiceProto";

service EclipseService {
  // Calculate eclipse intervals for a satellite
  rpc CalculateEclipses (EclipseRequest) returns (EclipseResponse) {}

  // Calculate eclipse intervals for multiple satellites (streaming response)
  rpc BulkCalculateEclipses (BulkEclipseRequest) returns (stream EclipseResponse) {}
}

message EclipseRequest {
  string tle_line1 = 1;
  string tle_line2 = 2;
  string start_date_iso = 3;
  string end_date_iso = 4;
}

message BulkEclipseRequest {
  // Multiple TLEs to process
  repeated TLEPair tles = 1;
  // Common date range for all satellites
  string start_date_iso = 2;
  string end_date_iso = 3;
}

message TLEPair {
  string line1 = 1;
  string line2 = 2;
}

message EclipseResponse {
    int32 norad_id = 1;
    repeated EclipseInterval intervals = 2;
}

message EclipseInterval {
    string start_iso = 1;
    string end_iso = 2;
    double duration_seconds = 3;
}
